--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Django 첫 배포 성공!!!!</h1>
+<h1>WELCOME MLHC</h1>
+
+
+<h1> 랜덤으로 선택한 광고 게시</h></br>
+<iframe width="560" height="315" src = {{ rand_url }} > </iframe>
+
+
+</br><h1> 저장되어 있는 광고갯수 {{len}}</h1></br>
+
+    <h2> 광고 링크 나열<h2>
+    {% for list in url_list %}
+            <h4> {{ list }} </h4>
+            <iframe width="360" height="115" src = {{ list }} > </iframe>
+    {% endfor %}
+
+
+
 </body>
 </html>
+
