--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -13,14 +13,38 @@
 <h1> 랜덤으로 선택한 광고 게시</h></br>
 <iframe width="560" height="315" src = {{ rand_url }} > </iframe>
 
+<h2>{{random_pick}}</h2>
+
+<h2> 광고 관련 피드백</h2>
+<form action="{% url 'main_page:P_feedback' random_pick %}" method="post">
+{% csrf_token %}
+<input type="submit" value="Positive" />
+</form>
+
+<form action="{% url 'main_page:N_feedback' random_pick %}" method="post">
+{% csrf_token %}
+
+<input type="submit" value="Negative" />
+</form>
+
+
+
+
 
 </br><h1> 저장되어 있는 광고갯수 {{len}}</h1></br>
 
-    <h2> 광고 링크 나열<h2>
+    <h2> 광고 링크 나열</h2>
     {% for list in url_list %}
             <h4> {{ list }} </h4>
             <iframe width="360" height="115" src = {{ list }} > </iframe>
     {% endfor %}
+
+    <h2> 광고 점수 나열</h2>
+    {% for list in feedback_value %}
+            <h4> {{ list }} </h4>
+    {% endfor %}
+
+
 
 
 
