--- a/main_page/templates/main_page/audio.html
+++ b/main_page/templates/main_page/audio.html
@@ -100,6 +100,16 @@
                         })
                         chunks = []
                         const audioURL = URL.createObjectURL(blob)
+
+
+                        var link = document.createElement("a");
+                        link.href = audioURL;
+                        link.download = "aDefaultFileName.ogg";
+                        link.innerHTML = "Click here to download the file";
+                        document.body.appendChild(link); // Or append it whereever you want
+
+
+
                         audio.src = audioURL
                         console.log("recorder stopped")
 
