--- a/main_page/templates/main_page/record.html
+++ b/main_page/templates/main_page/record.html
@@ -21,8 +21,7 @@
   	<p><strong>Recordings:</strong></p>
   	<ol id="recordingsList"></ol>
     <!-- inserting these scripts at the end to be able to use all the elements in the DOM -->
-  	<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
+  	<script src="/static/js/recorder.js"></script>
         <script src= "/static/js/app.js"></script>
-</script>
   </body>
 </html>
