--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -10,16 +10,18 @@
 <body>
 <h1>WELCOME MLHC</h1>
 
+<h1> 선택된 광고 게시: < {{selected_id}} ></h1></br>
+<h2> 선택된 태그 : < {% for list in scored_list %} #{{list}}   {% endfor %}></h2></br>
 
-<h1> 랜덤으로 선택한 광고 게시: < {{random_pick}} ></h></br>
-<iframe width="560" height="315" src = {{ rand_url }} > </iframe>
+
+<iframe width="560" height="315" src = {{ selected_url }} > </iframe>
 
 
-<h2> 선택한 광고의 피드백 값< {{random_ad_id_feedback_value}} ></h2></br>
+<h2> 선택된 광고의 피드백 값< {{selected_ad_id_feedback_value}} ></h2></br>
 
 
 <h3>테스트</h3></br>
-<span id="feedback_value">{{random_ad_id_feedback_value}}</span></br>
+<span id="feedback_value">{{selected_ad_id_feedback_value}}</span></br>
 
 
 <button id="P_button" value="Positive">좋아요</button>
@@ -62,7 +64,7 @@
             type:"GET",
             dataType:"JSON",
             url:'P_feedback/', 
-            data : { 'P_key': {{random_pick}} },
+            data : { 'P_key': {{selected_id}} },
             csrfmiddlewaretoken: '{{ csrf_token }}',
             success:function(response){ 
                 $('#feedback_value').html(response.update_feedback_value) 
@@ -77,7 +79,7 @@
             type:"GET",
             dataType:"JSON",
             url:'N_feedback/',
-            data : { 'N_key': {{random_pick}} },
+            data : { 'N_key': {{selected_id}} },
              csrfmiddlewaretoken: '{{ csrf_token }}',
             success:function(response){
                 $('#feedback_value').html(response.update_feedback_value)
@@ -106,10 +108,6 @@
 
 
 </br></br></br>
-
-
-
-
 
 
 
