--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -115,9 +115,12 @@
 </br><h1> 저장되어 있는 광고갯수 {{len}}</h1></br>
 
     <h2> 유사한 광고 출력 나열</h2>
-    {% for list in url_list %}
+    {% for list in similar_ad_list %}
             <h4> {{ list }} </h4>
             <!-- <iframe width="360" height="115" src = {{ list }} > </iframe> -->
+            
+            <img src="http://img.youtube.com/vi/{{ list }}/mqdefault.jpg">  <h4>제목</h4>
+
     {% endfor %}
 
     <h2> 위에 점수순으로 광고  나열</h2>
