get,random,select(키워드있음)에 대해서 처리 완료, select(키워드없음) 및 나머지 작업하면 됨

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>WELCOME MLHC</h1>
 
-<h1> 선택된 광고 게시: < {{selected_id}} ></h1></br>
+<h1> 선택된 광고 게시: < {{selected_name}} ></h1></br>
 <h2> 선택된 태그 : < {% for list in scored_list %} #{{list}}   {% endfor %}></h2></br>
 
 
