--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -5,17 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://www.youtube.com/player_api"></script>
+    <script src="http://www.youtube.com/iframe_api"></script>
 </head>
 
 <body>
-<h1>WELCOME MLHC</h1>
+<h1><a href = https://2021-capstone-mlhc.com/main_page/>WELCOME MLHC</a></h1>
 
 <h1> 선택된 광고 게시: < {{selected_name}} ></h1></br>
 <h2> 선택된 태그 : < {% for list in scored_list %} #{{list}}   {% endfor %}></h2></br>
 
 
-<iframe width="560" height="315" src = {{ selected_url }} > </iframe>
+<!--   <iframe width="560" height="315" src = {{ selected_url }} > </iframe>  -->
+
+<div id="player"></div>
+
+<script>
+      var tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '315',
+          width: '560',
+          videoId: '{{selected_url}}',
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      var done = false;
+      function onPlayerStateChange(event) {
+         if(event.data === 0)
+         {
+          //window.location = "http://2021-capstone-mlhc.com:8000/main_page/";
+          window.location = "https://2021-capstone-mlhc.com/main_page/";
+        }
+      }
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script>
 
 
 <h2> 선택된 광고의 피드백 값< {{selected_ad_id_feedback_value}} ></h2></br>
@@ -29,9 +68,6 @@
 <button id="N_button" value="Negative" name="N">싫어요</button>
 
 </br></br></br>
-
-
-
 
 
 <script>
