--- a/main_page/static/css/style.css
+++ b/main_page/static/css/style.css
@@ -6,21 +6,18 @@ body{
 
 #main_page {
     flex:1;
-    margin-left: 30%;
+    margin-left: 20%;
     width:80%;
 }
 
 #buttons_formats {
     display:none;
-
-
 }
-
 
 #similar_ad_list{
     flex:1;
     margin-left: 10%;
-    width:20%;
+    margin-right: 10%;
 }
 
 #similar_ad_img {
