기본 UI완성, 사용자B페이지 제작 준비 시작

--- a/main_page/static/css/style.css
+++ b/main_page/static/css/style.css
@@ -16,12 +16,14 @@ body{
 
 #similar_ad_list{
     flex:1;
-    margin-left: 10%;
+    margin-left: 5%;
     margin-right: 10%;
+    border-left:1px solid black;
 }
 
 #similar_ad_img {
     width: 50%;
+    margin-left:5%;
     display:flex;
 }
 
