--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,25 +6,24 @@ body{
 
 #main_page {
     flex:1;
-    margin-left: 30%;
+    margin-left: 20%;
     width:80%;
 }
 
 #buttons_formats {
     display:none;
-
-
 }
-
 
 #similar_ad_list{
     flex:1;
-    margin-left: 10%;
-    width:20%;
+    margin-left: 5%;
+    margin-right: 10%;
+    border-left:1px solid black;
 }
 
 #similar_ad_img {
     width: 50%;
+    margin-left:5%;
     display:flex;
 }
 
