여러 음성파일 찾으면서 카카오 api로 넘길 때, 문장이 없으면 에러나서 바로 try catch에서 에러쪽 코드로 넘어가는거 무시하고 다음거로 진행 되게  처리해주어야함.

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -48,7 +48,8 @@
         {
             console.log("played"); //setInterval은 실행되기만 하면 하루 종일 일 생김 -> 어차피 영상 멈추는 일을 가정하지 않으면 이게 나을 수 있음
             startRecording();
-            setInterval(function () { console.log("helo"); }, 3000);
+            setInterval(function () { stopRecording();
+                                      startRecording(); }, 3000);
             console.log("qwe");  // 영상 재생된  시간 float 반환 ->  player.getCurrentTime()
         }
         if(event.data === 2)  //영상 pause
